--- a/event/package.json
+++ b/event/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "event",
+  "name": "projeto_event",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,6 +39,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.6.0"
   }
 }
